--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,11 @@
     height: 15vh; /* tamanho do topo do site 15% da tela */
     
 }
+.conteúdo{
+    background-color: aquamarine; /*cor do fundo do topo do site*/
+    height: 85vh; /*resto do site*/
+
+
+
+
+}
