--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,10 @@
     height: 15vh; /* tamanho do topo do site 15% da tela */
     
 }
-.conteúdo{
+
+
+.conteudo{
     background-color: aquamarine; /*cor do fundo do topo do site*/
     height: 85vh; /*resto do site*/
-
-
-
 
 }
